<resources>
    <string name="app_name">FavBites</string>
    <string name="app_logo">App logo</string>

    <string name="slide_1_title">BENEFITS OF REGISTERING TO SELL</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">BASIC COMPANY INFORMATION</string>
    <string name="slide_2_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s</string>

    <string name="slide_3_title">ONLINE DUMMY OPTION</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="terms_conditions">I hereby accept all the Terms and Conditions</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">- Or -</string>
    <string name="facebook">facebook</string>
    <string name="google">google</string>
    <string name="registration">Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="skip_sign_in">Skip Sign In</string>
    <string name="facebook_app_id">470430176676573</string>
    <string name="fb_login_protocol_scheme">fb470430176676573</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="search_restaurant">Search restaurants by name or dish name</string>
    <string name="filter">Filters</string>
    <string name="restaurant">Restaurants</string>
    <string name="favbites">FavBites</string>
    <string name="check_in">Check-in</string>
    <string name="no_restaurant">Sorry, there is no data for the restaurants.</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="menu">Menu</string>
    <string name="upload">Upload Photo</string>
    <string name="restaurant_profile">Restaurant Profile</string>
    <string name="reviews">Ratings</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="item_name">Item name</string>
    <string name="bookmark">Bookmarks</string>
    <string name="ratings">Ratings</string>
    <string name="posts">Posts</string>
    <string name="submit">Submit</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="call">Call</string>
    <string name="open_now">Open now</string>
    <string name="closed_now">Closed</string>
    <string name="show_more">Show More</string>
    <string name="anonymous">Anonymous User</string>
    <string name="google_maps_key">AIzaSyBhTTryJwnaYxMYEbLi6blhzRvP52OicEY</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="photo">Photo</string>
    <string name="edit_review">Edit Ratings</string>
    <string name="add_review">Add Review</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="guest_user">Guest User</string>
    <string name="update_profile_failed">Sorry, failed to update your profile. Please try again.</string>
    <string name="pick_image_intent_text">Update Image</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="favbites_user">FavBites User</string>
    <string name="photos">Photos</string>
    <string name="no_bookmark">Sorry, you have no bookmarked restaurants.</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="no_followers">Sorry, there is no data about the followers.</string>
    <string name="no_following">Sorry, there is no data about the following.</string>
    <string name="followers">Followers</string>
    <string name="user_profile">User Profile</string>
    <string name="error_server">Something went wrong! Please try again.</string>
    <string name="error_internet_connection">No internet connection</string>
    <string name="error_permissions_denied">Please grant all the permissions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checked_in">Checked in</string>
    <string name="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="prompt_check_login_bookmarks">Please login to check your bookmark restaurants</string>
    <string name="error_empty_location">Please enter the location</string>
    <string name="success_bookmarked">Restaurant has been bookmarked successfully.</string>
    <string name="success_bookmark_removed">Restaurant has been removed from your bookmarks.</string>
    <string name="success_checked_in">You have checked in the</string>
    <string name="error_check_in_failed">Failed to check in. Please try again.</string>
    <string name="error_already_checked_in">You have already checked in the restaurant</string>
    <string name="error_guest_check_in">Please login to check in the restaurant</string>
    <string name="error_restaurant_closed">Sorry, restaurant is closed now.</string>
    <string name="error_contact_information_empty">Sorry, this restaurant doesn\'t have any contact information</string>
    <string name="error_guest_post">Please login to post something</string>
    <string name="prompt_login_for_bookmark">Please login to bookmark any restaurant</string>
    <string name="success_logged_out">You have been logged out successfully</string>
    <string name="alert_logout">Are you sure you want to logout?</string>
    <string name="error_current_location_unavailable">Unable to get your current location</string>
    <string name="prompt_my_reviews">My Reviews</string>

</resources>
