<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/slide_bg1"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/back"
                android:padding="@dimen/_10sdp"
                android:background="?selectableItemBackground"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/location"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:padding="@dimen/_10sdp"
                android:layout_gravity="center"
                android:textSize="@dimen/_20ssp"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#fff"/>

    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:contentDescription="@string/app_logo"
                    android:src="@drawable/splash_logo" />

                <EditText
                    android:id="@+id/editFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    android:background="@drawable/round_shape_edittext"
                    android:gravity="center"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <EditText
                    android:id="@+id/editLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@drawable/round_shape_edittext"
                    android:gravity="center"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/round_shape_edittext"
                    android:gravity="center"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_10sdp"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/round_shape_edittext"
                    android:gravity="center"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_10sdp"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <EditText
                    android:id="@+id/editConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/round_shape_edittext"
                    android:gravity="center"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_10sdp"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_15sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cbTerms"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:button="@drawable/checkbox_selector" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/terms_conditions"
                        android:textColor="#fff"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvSignUp"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/round_shape_yellow"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/sign_up"
                    android:textColor="#2A2737"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/or"
                    android:textColor="#fff"
                    android:textSize="@dimen/_25ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:contentDescription="@string/facebook"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/fb" />

                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:contentDescription="@string/google"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/google_plus" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>
