<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/slide_bg1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:layout_gravity="center"
            android:textSize="@dimen/_20ssp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#fff"/>

    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_130sdp"
        android:src="@drawable/splash_logo"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@string/app_logo"/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:hint="@string/email"
        android:gravity="center"
        android:textColor="#fff"
        android:padding="@dimen/_12sdp"
        android:inputType="textEmailAddress"
        android:background="@drawable/round_shape_edittext"
        android:textColorHint="#fff"/>

    <TextView
        android:id="@+id/tvSubmit"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_shape_yellow"
        android:text="@string/submit"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="@dimen/_15ssp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:padding="@dimen/_12sdp"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textColor="#2A2737" />

</LinearLayout>
