<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slide_bg1">

    <ImageView
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_130sdp"
        android:src="@drawable/splash_logo"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        android:contentDescription="@string/app_logo"/>

    <ImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/slider_icon3"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@null"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slide_1_title"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_15sdp"
        android:textSize="@dimen/_16ssp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slide_1_desc"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_13ssp"/>

</LinearLayout>