<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="horizontal"
        android:background="#2A2736">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/back"
            android:padding="@dimen/_10sdp"
            android:clickable="true"
            android:foreground="@drawable/selectable_item_background"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/location"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:padding="@dimen/_10sdp"
            android:layout_gravity="center"
            android:textSize="@dimen/_18ssp" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerFollowers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvNoFollower"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:layout_gravity="center"
        android:textColor="#000"
        android:textSize="@dimen/_18ssp"
        android:text="@string/no_followers"/>

</LinearLayout>
